--- a/index.html
+++ b/index.html
@@ -43,7 +43,27 @@
 </head>
 
 <body class="font-manrope">
-    <h1>Its My own Tea House</h1>
+    <header class="container mx-auto">
+      <h1 class="justify-center">Its My RKO Tea House</h1>
+      <div class="hero min-h-screen bg-base-200">
+        <div class="hero-content flex-col lg:flex-row-reverse">
+          <img src="images/banner.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <div>
+            <h1 class="text-7xl font-extrabold text-black">It's good <br> tea time at The <br> Tea House</h1>
+            <p class="py-6 text-xl font-medium text-gray-600">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+            <button class="btn btn-primary text-white bg-orange-700">Explore More</button>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 
