added image sidebar

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
           }
         }
       </script>
+
+      <!--Font Awesome connection link-->
+      <script src="https://kit.fontawesome.com/f558265ee4.js" crossorigin="anonymous"></script>
+
     <style>
         /* plus jakarta font class */
         .font-jakarta {
@@ -47,7 +51,15 @@
       <h1 class="justify-center">Its My RKO Tea House</h1>
       <div class="hero min-h-screen bg-base-200">
         <div class="hero-content flex-col lg:flex-row-reverse">
-          <img src="images/banner.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <img src="images/banner.png" class="max-w-sm rounded-lg shadow-2xl"/>
+          <div class="flex items-center gap-5 bg-red-800 p-5 rounded-3xl -mt-4">
+            <i class="fa-solid fa-star text-yellow-500"></i>
+            <div>
+              <h2 class="text-3xl font-extrabold text-black">5.00</h2>
+              <p class="text-lg font-semibold text-gray-500">Trust Pilot Ratings</p>
+            </div>
+          </div>
+
           <div>
             <h1 class="text-7xl font-extrabold text-black">It's good <br> tea time at The <br> Tea House</h1>
             <p class="py-6 text-xl font-medium text-gray-600">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
