--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
       <h1 class="justify-center">Its My RKO Tea House</h1>
       <div class="hero min-h-screen bg-base-200">
         <div class="hero-content flex-col lg:flex-row-reverse">
-          <img src="images/banner.png" class="max-w-sm rounded-lg shadow-2xl"/>
-          <div class="flex items-center gap-5 bg-red-800 p-5 rounded-3xl -mt-4">
+          <img src="images/banner.png" class="max-w-sm"/>
+          <!-- Rating Badge Section-->
+          <div class="flex items-center gap-5 bg-white p-5 w-60 rounded-3xl -mt-20 relative top-20 left-80">
             <i class="fa-solid fa-star text-yellow-500"></i>
             <div>
               <h2 class="text-3xl font-extrabold text-black">5.00</h2>
@@ -63,7 +64,7 @@
           <div>
             <h1 class="text-7xl font-extrabold text-black">It's good <br> tea time at The <br> Tea House</h1>
             <p class="py-6 text-xl font-medium text-gray-600">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
-            <button class="btn btn-primary text-white bg-orange-700">Explore More</button>
+            <button class="btn btn-primary text-white bg-orange-700 w-52 h-16">Explore More <i class="fa-solid fa-arrow-up-right-from-square w-16"></i> </button>
           </div>
         </div>
       </div>
