--- a/index.html
+++ b/index.html
@@ -2,81 +2,84 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Tailwind and DaisyUi-->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!--Manrope Link-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <!--Plus Jakarta Font Link-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <title>Rko-Tea-House</title>
-    <!--Tailwind Custom Color-->
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Tailwind and DaisyUi-->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!--Manrope Link-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <!--Plus Jakarta Font Link-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <title>Rko-Tea-House</title>
+  <!--Tailwind Custom Color-->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
           }
         }
-      </script>
+      }
+    }
+  </script>
 
-      <!--Font Awesome connection link-->
-      <script src="https://kit.fontawesome.com/f558265ee4.js" crossorigin="anonymous"></script>
+  <!--Font Awesome connection link-->
+  <script src="https://kit.fontawesome.com/f558265ee4.js" crossorigin="anonymous"></script>
 
-    <style>
-        /* plus jakarta font class */
-        .font-jakarta {
-            font-family: 'Plus Jakarta Sans', sans-serif;
-        }
+  <style>
+    /* plus jakarta font class */
+    .font-jakarta {
+      font-family: 'Plus Jakarta Sans', sans-serif;
+    }
 
-        /* Manrope font class */
-        .font-manrope {
-            font-family: 'Manrope', sans-serif;
-        }
-    </style>
+    /* Manrope font class */
+    .font-manrope {
+      font-family: 'Manrope', sans-serif;
+    }
+  </style>
 </head>
 
 <body class="font-manrope">
-    <header class="container mx-auto">
-      <h1 class="justify-center">Its My RKO Tea House</h1>
-      <div class="hero min-h-screen bg-base-200">
-        <div class="hero-content flex-col lg:flex-row-reverse">
-          <img src="images/banner.png" class="max-w-sm"/>
-          <!-- Rating Badge Section-->
-          <div class="flex items-center gap-5 bg-white p-5 w-60 rounded-3xl -mt-20 relative top-20 left-80">
-            <i class="fa-solid fa-star text-yellow-500"></i>
-            <div>
-              <h2 class="text-3xl font-extrabold text-black">5.00</h2>
-              <p class="text-lg font-semibold text-gray-500">Trust Pilot Ratings</p>
-            </div>
-          </div>
+  <header class="container mx-auto">
+    <h1 class="text-left lg:text-center bg-red-700 text-yellow-400">Its My RKO Tea House</h1>
+    <div class="hero min-h-screen bg-gray-100">
+      <div class="hero-content flex-col lg:flex-row">
 
-          <div>
-            <h1 class="text-7xl font-extrabold text-black">It's good <br> tea time at The <br> Tea House</h1>
-            <p class="py-6 text-xl font-medium text-gray-600">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
-            <button class="btn btn-primary text-white bg-orange-700 w-52 h-16">Explore More <i class="fa-solid fa-arrow-up-right-from-square w-16"></i> </button>
+        <div>
+          <h1 class="text-7xl font-extrabold text-black">It's good<br>tea time at The<br>Tea House</h1>
+          <p class="py-6 text-gray-700">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
+            Buds.</p>
+          <button class="btn btn-primary bg-orange-600 text-white border-spacing-3 text-2xl">Explore More</button>
+        </div>
+        <div>
+          <img src="images/banner.png" class="max-w-sm rounded-lg" />
+          <div class="mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-64">
+            <div>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+            </div>
+            <div>
+              <h3 class="text-black text-2xl">5.00</h3>
+              <p class="text-gray-700 text-xl">Trust Pilot Ratings</p>
+            </div>
           </div>
         </div>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <main>
+  <main>
 
-    </main>
+  </main>
 
-    <footer>
+  <footer>
 
-    </footer>
+  </footer>
 
 </body>
 
