--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       theme: {
         extend: {
           colors: {
-            clifford: '#da373d',
+            clifford: '#FFFFFF',
           }
         }
       }
@@ -73,8 +73,12 @@
     </div>
   </header>
 
-  <main>
-
+  <main class="container mx-auto">
+    <!--Featured section-->
+    <section class="text-center bg-gray-100">
+      <h2>Our Featured Products</h2>
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+    </section>
   </main>
 
   <footer>
