--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body class="font-manrope">
   <header class="container mx-auto">
-    <h1 class="text-left lg:text-center bg-red-700 text-yellow-400">Its My RKO Tea House</h1>
+    <h1 class="text-center lg:text-center bg-red-700 text-yellow-400 text-2xl">RKO Tea House</h1>
     <div class="hero min-h-screen bg-gray-100">
       <div class="hero-content flex-col lg:flex-row">
 
@@ -55,11 +55,11 @@
           <h1 class="text-7xl font-extrabold text-black">It's good<br>tea time at The<br>Tea House</h1>
           <p class="py-6 text-gray-700">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
             Buds.</p>
-          <button class="btn btn-primary bg-orange-600 text-white border-spacing-3 text-2xl">Explore More</button>
+          <button class="btn btn-primary bg-orange-600 text-white border-spacing-3 text-2xl">Explore More <i class="fa-solid fa-arrow-up-right-dots"></i></button>
         </div>
         <div>
           <img src="images/banner.png" class="max-w-sm rounded-lg" />
-          <div class="mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-64">
+          <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-64">
             <div>
               <i class="fa-solid fa-star text-yellow-400"></i>
             </div>
@@ -76,8 +76,8 @@
   <main class="container mx-auto">
     <!--Featured section-->
     <section class="text-center bg-gray-100">
-      <h2>Our Featured Products</h2>
-      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      <h2 class="text-black text-5xl font-extrabold">Our Featured Products</h2>
+      <p class="text-gray-700 text-lg font-medium py-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
     </section>
   </main>
 
