Featured section done with Responsive work

--- a/index.html
+++ b/index.html
@@ -76,8 +76,51 @@
   <main class="container mx-auto">
     <!--Featured section-->
     <section class="text-center bg-gray-100">
-      <h2 class="text-black text-5xl font-extrabold">Our Featured Products</h2>
-      <p class="text-gray-700 text-lg font-medium py-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      <h2 class="text-black text-5xl font-extrabold mb-5">Our Featured Products</h2>
+      <p class="text-gray-700 text-lg font-medium py-6 lg:max-w-4xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        
+        <!--First Tea Card-->
+        <div class="card w-auto p-8 text-center bg-gray-200 shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="/images/tea-1.png" alt="Tea-1" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="text-black card-title text-2xl font-extrabold ">Milk Tea</h2>
+            <p class="text-gray-700 text-base font-semibold">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!--Second  Tea Card-->
+        <div class="card w-auto p-8 text-center bg-gray-200 shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="/images/tea-2.png" alt="Tea-2" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="text-black card-title text-2xl font-extrabold ">Black Tea</h2>
+            <p class="text-gray-700 text-base font-semibold">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!--Third Tea Card-->
+        <div class="card w-auto p-8 text-center bg-gray-200 shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="/images/tea-3.png" alt="Tea-3" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="text-black card-title text-2xl font-extrabold ">Lemon Tea</h2>
+            <p class="text-gray-700 text-base font-semibold">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!--Fourth Tea Card-->
+        <div class="card w-auto p-8 text-center bg-gray-200 shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="/images/tea-4.png" alt="Tea-4" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="text-black card-title text-2xl font-extrabold ">Green Tea</h2>
+            <p class="text-gray-700 text-base font-semibold">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
