--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </style>
 </head>
 
-<body class="font-manrope">
+<body class="font-manrope bg-slate-300">
   <header class="container mx-auto">
     <h1 class="text-center lg:text-center bg-red-700 text-yellow-400 text-2xl">RKO Tea House</h1>
     <div class="hero min-h-screen bg-gray-100">
@@ -75,7 +75,7 @@
 
   <main class="container mx-auto">
     <!--Featured section-->
-    <section class="text-center bg-gray-100">
+    <section class="text-center bg-gray-100 my-24">
       <h2 class="text-black text-5xl font-extrabold mb-5">Our Featured Products</h2>
       <p class="text-gray-700 text-lg font-medium py-6 lg:max-w-4xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
@@ -122,10 +122,14 @@
         </div>
       </div>
     </section>
+    <!--Great Tea section-->
+    <section class="">
+
+    </section>
   </main>
 
-  <footer>
-
+  <footer class="bg-slate-300">
+    <h2 class="text-red-950 border-t-indigo-800"> Footer it is</h2>
   </footer>
 
 </body>
