--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body class="font-manrope bg-slate-300">
   <header class="container mx-auto">
-    <h1 class="text-center lg:text-center bg-red-700 text-yellow-400 text-2xl">RKO Tea House</h1>
+    <h1 class="text-center lg:text-center bg-green-600 text-black text-3xl font-extrabold">" ..Rko.. Tea-House "</h1>
     <div class="hero min-h-screen bg-gray-100">
       <div class="hero-content flex-col lg:flex-row">
 
@@ -74,6 +74,7 @@
   </header>
 
   <main class="container mx-auto">
+
     <!--Featured section-->
     <section class="text-center bg-gray-100 my-24">
       <h2 class="text-black text-5xl font-extrabold mb-5">Our Featured Products</h2>
@@ -90,6 +91,7 @@
             <p class="text-gray-700 text-base font-semibold">Creamer could be replaced by fresh milk</p>
           </div>
         </div>
+
         <!--Second  Tea Card-->
         <div class="card w-auto p-8 text-center bg-gray-200 shadow-xl">
           <figure class="px-10 pt-10">
@@ -100,6 +102,7 @@
             <p class="text-gray-700 text-base font-semibold">Creamer could be replaced by fresh milk</p>
           </div>
         </div>
+
         <!--Third Tea Card-->
         <div class="card w-auto p-8 text-center bg-gray-200 shadow-xl">
           <figure class="px-10 pt-10">
@@ -110,6 +113,7 @@
             <p class="text-gray-700 text-base font-semibold">Creamer could be replaced by fresh milk</p>
           </div>
         </div>
+
         <!--Fourth Tea Card-->
         <div class="card w-auto p-8 text-center bg-gray-200 shadow-xl">
           <figure class="px-10 pt-10">
@@ -122,9 +126,23 @@
         </div>
       </div>
     </section>
-    <!--Great Tea section-->
-    <section class="">
 
+    <!--Great Tea section-->
+    <section class="text-center bg-gray-100 my-24 flex flex-col lg:flex-row">
+      <div class="grid gap-8 grid-cols-1 md: grid-cols-2 flex-1">
+        <div><p class="bg-slate-900">Delete</p></div>
+        <div class="row-span-2"><img src="/images/fresh-1.png"></div>
+        <div class="row-span-2"><img src="/images/fresh-2.png"></div>
+        <div><p class="bg-slate-900">Delete</p></div>
+      </div>
+      <div class="space-y-5 flex-1">
+        <h3 class="text-black text-5xl font-extrabold mb-5">Great Tea, Freshly<br> Presented</h2>
+        <p class="text-gray-700 font-medium text-base">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+        <h3 class="text-black font-extrabold text-xl">Unique Taste</h5>
+        <p class="text-gray-700 font-medium text-base">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+        <h3 class="text-black font-extrabold text-xl">Premium Quality</h5>
+        <p class="text-gray-700 font-medium text-base">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+      </div>
     </section>
   </main>
 
