complete the Great Tea section

--- a/index.html
+++ b/index.html
@@ -128,19 +128,22 @@
     </section>
 
     <!--Great Tea section-->
-    <section class="text-center bg-gray-100 my-24 flex flex-col lg:flex-row">
+    <section class="text-center bg-gray-100 my-24 flex flex-col lg:flex-row gap-14 py-9">
+
+
       <div class="grid gap-8 grid-cols-1 md: grid-cols-2 flex-1">
-        <div><p class="bg-slate-900">Delete</p></div>
-        <div class="row-span-2"><img src="/images/fresh-1.png"></div>
-        <div class="row-span-2"><img src="/images/fresh-2.png"></div>
-        <div><p class="bg-slate-900">Delete</p></div>
+        <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-red-200 to-orange-200"><p>Delete</p></div>
+        <div class="row-span-2 rounded-xl bg-[#F3E8DD]"><img src="/images/fresh-1.png"></div>
+        <div class="row-span-2 rounded-xl bg-[#CDE4EC]"><img src="/images/fresh-2.png"></div>
+        <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-blue-300 to-gray-300"><p>Delete</p></div>
       </div>
+
       <div class="space-y-5 flex-1">
-        <h3 class="text-black text-5xl font-extrabold mb-5">Great Tea, Freshly<br> Presented</h2>
+        <h3 class="text-black text-5xl font-extrabold">Great Tea, Freshly<br> Presented</h3>
         <p class="text-gray-700 font-medium text-base">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
-        <h3 class="text-black font-extrabold text-xl">Unique Taste</h5>
+        <h3 class="text-black font-extrabold text-xl">Unique Taste</h3>
         <p class="text-gray-700 font-medium text-base">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
-        <h3 class="text-black font-extrabold text-xl">Premium Quality</h5>
+        <h3 class="text-black font-extrabold text-xl">Premium Quality</h3>
         <p class="text-gray-700 font-medium text-base">Premium Quality that makes tea more elegant and more durable when you use it.</p>
       </div>
     </section>
