Great Tea Section completed

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 
 
       <div class="grid gap-8 grid-cols-1 md: grid-cols-2 flex-1">
-        <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-red-200 to-orange-200"><p>Delete</p></div>
-        <div class="row-span-2 rounded-xl bg-[#F3E8DD]"><img src="/images/fresh-1.png"></div>
-        <div class="row-span-2 rounded-xl bg-[#CDE4EC]"><img src="/images/fresh-2.png"></div>
-        <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-blue-300 to-gray-300"><p>Delete</p></div>
+        <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-red-200 to-orange-200 h-32"><p>Delete</p></div>
+        <div class="row-span-2 rounded-xl bg-[#F3E8DD] py-12 px-8 flex justify-center items-center"><img src="/images/fresh-1.png"></div>
+        <div class="row-span-2 rounded-xl bg-[#CDE4EC] py-12 px-8 flex justify-center items-center"><img src="/images/fresh-2.png"></div>
+        <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-blue-300 to-gray-300 h-32"><p>Delete</p></div>
       </div>
 
       <div class="space-y-5 flex-1">
@@ -150,7 +150,7 @@
   </main>
 
   <footer class="bg-slate-300">
-    <h2 class="text-red-950 border-t-indigo-800"> Footer it is</h2>
+    <h2 class="text-red-950 border-t-indigo-800 rounded"> Footer it is</h2>
   </footer>
 
 </body>
