added Meet Our Super Section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
           <h1 class="text-7xl font-extrabold text-black">It's good<br>tea time at The<br>Tea House</h1>
           <p class="py-6 text-gray-700">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
             Buds.</p>
-          <button class="btn btn-primary bg-orange-600 text-white border-spacing-3 text-2xl">Explore More <i class="fa-solid fa-arrow-up-right-dots"></i></button>
+          <button class="btn btn-primary bg-orange-600 text-white border-spacing-3 text-2xl">Explore More <i
+              class="fa-solid fa-arrow-up-right-dots"></i></button>
         </div>
         <div>
           <img src="images/banner.png" class="max-w-sm rounded-lg" />
@@ -78,9 +79,11 @@
     <!--Featured section-->
     <section class="text-center bg-gray-100 my-24">
       <h2 class="text-black text-5xl font-extrabold mb-5">Our Featured Products</h2>
-      <p class="text-gray-700 text-lg font-medium py-6 lg:max-w-4xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      <p class="text-gray-700 text-lg font-medium py-6 lg:max-w-4xl mx-auto mb-10">There are many variations of passages
+        of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
+        randomised words which don't look even slightly believable. </p>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-        
+
         <!--First Tea Card-->
         <div class="card w-auto p-8 text-center bg-gray-200 shadow-xl">
           <figure class="px-10 pt-10">
@@ -128,24 +131,50 @@
     </section>
 
     <!--Great Tea section-->
-    <section class="text-center bg-gray-100 my-24 flex flex-col lg:flex-row gap-14 py-9">
+    <section class="my-24 text-center bg-gray-100 flex flex-col lg:flex-row gap-14 py-9">
 
 
       <div class="grid gap-8 grid-cols-1 md: grid-cols-2 flex-1">
-        <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-red-200 to-orange-200 h-32"><p>Delete</p></div>
-        <div class="row-span-2 rounded-xl bg-[#F3E8DD] py-12 px-8 flex justify-center items-center"><img src="/images/fresh-1.png"></div>
-        <div class="row-span-2 rounded-xl bg-[#CDE4EC] py-12 px-8 flex justify-center items-center"><img src="/images/fresh-2.png"></div>
-        <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-blue-300 to-gray-300 h-32"><p>Delete</p></div>
+        <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-red-200 to-orange-200 h-32">
+          <p>Delete</p>
+        </div>
+        <div class="row-span-2 rounded-xl bg-[#F3E8DD] py-12 px-8 flex justify-center items-center"><img
+            src="/images/fresh-1.png"></div>
+        <div class="row-span-2 rounded-xl bg-[#CDE4EC] py-12 px-8 flex justify-center items-center"><img
+            src="/images/fresh-2.png"></div>
+        <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-blue-300 to-gray-300 h-32">
+          <p>Delete</p>
+        </div>
       </div>
 
       <div class="space-y-5 flex-1">
         <h3 class="text-black text-5xl font-extrabold">Great Tea, Freshly<br> Presented</h3>
-        <p class="text-gray-700 font-medium text-base">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+        <p class="text-gray-700 font-medium text-base">The meaning of gong cha is chanese is to provide the best tea to
+          emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006,
+          Gong cha had been deeply appreciated by its custoers because of good words of mouth and unique customized
+          service orginated from Taiwan.</p>
         <h3 class="text-black font-extrabold text-xl">Unique Taste</h3>
-        <p class="text-gray-700 font-medium text-base">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+        <p class="text-gray-700 font-medium text-base">A Unique and different style from other teapots gives a luxurious
+          and minimalist impression</p>
         <h3 class="text-black font-extrabold text-xl">Premium Quality</h3>
-        <p class="text-gray-700 font-medium text-base">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        <p class="text-gray-700 font-medium text-base">Premium Quality that makes tea more elegant and more durable when
+          you use it.</p>
       </div>
+    </section>
+
+    <!--Meet Our Super section-->
+    <section class="my-24">
+      <!--Left Part-->
+      <div>
+        <h3 class="text-white text-5xl font-extrabold">Meet Our Super<br> Clients</h3>
+        <p class="text-white font-medium text-base">There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+          even slightly believable. </p>
+        <button class="btn btn-primary bg-white text-orange-600 border-spacing-3 text-2xl">Show All</button>
+      </div>
+
+      <!--Right Part-->
+      <div></div>
     </section>
   </main>
 
