--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
 
       <div class="grid gap-8 grid-cols-1 md: grid-cols-2 flex-1">
         <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-red-200 to-orange-200 h-32">
-          <p>Delete</p>
+          <p>...</p>
         </div>
         <div class="row-span-2 rounded-xl bg-[#F3E8DD] py-12 px-8 flex justify-center items-center"><img
             src="/images/fresh-1.png"></div>
         <div class="row-span-2 rounded-xl bg-[#CDE4EC] py-12 px-8 flex justify-center items-center"><img
             src="/images/fresh-2.png"></div>
         <div class="bg-slate-900 rounded-xl bg-gradient-to-r from-blue-300 to-gray-300 h-32">
-          <p>Delete</p>
+          <p>...</p>
         </div>
       </div>
 
@@ -163,18 +163,26 @@
     </section>
 
     <!--Meet Our Super section-->
-    <section class="my-24">
+    <section class="my-24 rounded-xl bg-gradient-to-r from-orange-400 to-red-700 flex flex-col lg:flex-row py-20 px-16">
       <!--Left Part-->
-      <div>
-        <h3 class="text-white text-5xl font-extrabold">Meet Our Super<br> Clients</h3>
-        <p class="text-white font-medium text-base">There are many variations of passages of Lorem Ipsum available, but
+      <div class="px-16 py-40">
+        <h3 class="text-white text-5xl font-extrabold py-5">Meet Our Super<br> Clients</h3>
+        <p class="text-white font-medium text-base py-7">There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration in some form, by injected humour, or randomised words which don't look
           even slightly believable. </p>
         <button class="btn btn-primary bg-white text-orange-600 border-spacing-3 text-2xl">Show All</button>
       </div>
 
       <!--Right Part-->
-      <div></div>
+      <div class="relative p-10 my-56 rounded-lg bg-white">
+        <img class="absolute -left-4 bottom-52 border-4 border-white rounded-full" src="/images/client.png">
+        <p class="text-base font-normalb py-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+        <h3 class="text-black font-bold text-lg">Ilham Yuda</h3>
+        <p class="text-base font-medium">Businessman</p>
+        <div class="flex justify-end">
+          <img src="/images/circles.png">
+        </div>
+      </div>
     </section>
   </main>
 
