--- a/index.html
+++ b/index.html
@@ -165,24 +165,58 @@
     <!--Meet Our Super section-->
     <section class="my-24 rounded-xl bg-gradient-to-r from-orange-400 to-red-700 flex flex-col lg:flex-row py-20 px-16">
       <!--Left Part-->
+        <div class="flex items-center lg:pr-28">
       <div class="px-16 py-40">
         <h3 class="text-white text-5xl font-extrabold py-5">Meet Our Super<br> Clients</h3>
-        <p class="text-white font-medium text-base py-7">There are many variations of passages of Lorem Ipsum available, but
+        <p class="text-white font-medium text-base py-7">There are many variations of passages of Lorem Ipsum available,
+          but
           the majority have suffered alteration in some form, by injected humour, or randomised words which don't look
           even slightly believable. </p>
         <button class="btn btn-primary bg-white text-orange-600 border-spacing-3 text-2xl">Show All</button>
       </div>
-
+        </div>
       <!--Right Part-->
-      <div class="relative p-10 my-56 rounded-lg bg-white">
+
+      <!--Top Part-->
+      <div class="relative">
+
+      <div class="relative p-10 rounded-lg bg-white opacity-30 mb-16 z-30">
         <img class="absolute -left-4 bottom-52 border-4 border-white rounded-full" src="/images/client.png">
-        <p class="text-base font-normalb py-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+        <p class="text-base font-normalb py-5">We are providing the best and suitable home insurance services for the
+          people who are interested to treatment</p>
         <h3 class="text-black font-bold text-lg">Ilham Yuda</h3>
         <p class="text-base font-medium">Businessman</p>
         <div class="flex justify-end">
           <img src="/images/circles.png">
         </div>
       </div>
+
+      <!--Middle Part-->
+      <div class="absolute p-10 rounded-lg bg-white top-40 lg:-left-24 lg: w-[430px] z-40">
+        <img class="absolute -left-4 bottom-52 border-4 border-white rounded-full" src="/images/client.png">
+        <p class="text-base font-normalb py-5">We are providing the best and suitable home insurance services for the
+          people who are interested to treatment</p>
+        <h3 class="text-black font-bold text-lg">Ilham Yuda</h3>
+        <p class="text-base font-medium">Businessman</p>
+        <div class="flex justify-end">
+          <img src="/images/circles.png">
+        </div>
+      </div>
+
+      <!--Bottom Part-->
+      <div class="relative p-10 rounded-lg bg-white opacity-30 z-30">
+        <img class="absolute -left-4 bottom-52 border-4 border-white rounded-full" src="/images/client.png">
+        <p class="text-base font-normalb py-5">We are providing the best and suitable home insurance services for the
+          people who are interested to treatment</p>
+        <h3 class="text-black font-bold text-lg">Ilham Yuda</h3>
+        <p class="text-base font-medium">Businessman</p>
+        <div class="flex justify-end">
+          <img src="/images/circles.png">
+        </div>
+      </div>
+
+    </div>
+
     </section>
   </main>
 
