Added News and Events section

--- a/index.html
+++ b/index.html
@@ -218,6 +218,56 @@
     </div>
 
     </section>
+
+    <!--News And Events Section-->
+
+    <!--Heading Parts-->
+    <section class="my-24 text-center bg-gray-100 py-9">
+      <div>
+      <h3 class="text-black text-5xl font-extrabold py-5">News & Events </h3>
+      <p class="text-gray-700 text-lg font-medium py-6 lg:max-w-4xl mx-auto mb-10">News & Events There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      </div>
+
+    <!--Card Parts-->
+    <div class="flex justify-center gap-10">
+      <div class="card w-96 bg-slate-100 shadow-xl border-gray-400 border-2">
+        <figure class="px-10 pt-10">
+          <img src="/images/news-1.png" alt="img-1" class="rounded-xl" />
+        </figure>
+        <div class="card-body items-start text-left">
+          <p class="text-gray-700 text-lg font-medium">Feb 05, 2027</p>
+          <h2 class="text-black text-xl font-extrabold py-5">Collecting 8 points for discount</h2>
+          <p class="text-gray-700 text-lg font-medium">There are many variations of passages of Lorem Ipsum available.</p>
+            <h5 class="text-black text-base font-bold py-5">Learn More</h5>
+        </div>
+      </div>
+
+      <div class="card w-96 bg-slate-100 shadow-xl border-gray-400 border-2">
+        <figure class="px-10 pt-10">
+          <img src="/images/news-2.png" alt="img-1" class="rounded-xl" />
+        </figure>
+        <div class="card-body items-start text-left">
+          <p class="text-gray-700 text-lg font-medium">Feb 05, 2027</p>
+          <h2 class="text-black text-xl font-extrabold py-5">Collecting 8 points for discount</h2>
+          <p class="text-gray-700 text-lg font-medium">There are many variations of passages of Lorem Ipsum available.</p>
+            <h5 class="text-black text-base font-bold py-5">Learn More</h5>
+        </div>
+      </div>
+
+      <div class="card w-96 bg-slate-100 shadow-xl border-gray-400 border-2">
+        <figure class="px-10 pt-10">
+          <img src="/images/news-3.png" alt="img-1" class="rounded-xl" />
+        </figure>
+        <div class="card-body items-start text-left">
+          <p class="text-gray-700 text-lg font-medium">Feb 05, 2027</p>
+          <h2 class="text-black text-xl font-extrabold py-5">Collecting 8 points for discount</h2>
+          <p class="text-gray-700 text-lg font-medium">There are many variations of passages of Lorem Ipsum available.</p>
+            <h5 class="text-black text-base font-bold py-5">Learn More</h5>
+        </div>
+      </div>
+    </div>
+    </section>
+
   </main>
 
   <footer class="bg-slate-300">
