--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
       </div>
 
     <!--Card Parts-->
-    <div class="flex justify-center gap-10">
-      <div class="card w-96 bg-slate-100 shadow-xl border-gray-400 border-2">
+    <div class="flex flex-col lg:flex-row justify-center gap-10">
+      <div class="card w-auto bg-slate-100 shadow-xl border-gray-400 border-2">
         <figure class="px-10 pt-10">
           <img src="/images/news-1.png" alt="img-1" class="rounded-xl" />
         </figure>
@@ -242,7 +242,7 @@
         </div>
       </div>
 
-      <div class="card w-96 bg-slate-100 shadow-xl border-gray-400 border-2">
+      <div class="card w-auto bg-slate-100 shadow-xl border-gray-400 border-2">
         <figure class="px-10 pt-10">
           <img src="/images/news-2.png" alt="img-1" class="rounded-xl" />
         </figure>
@@ -254,7 +254,7 @@
         </div>
       </div>
 
-      <div class="card w-96 bg-slate-100 shadow-xl border-gray-400 border-2">
+      <div class="card w-auto bg-slate-100 shadow-xl border-gray-400 border-2">
         <figure class="px-10 pt-10">
           <img src="/images/news-3.png" alt="img-1" class="rounded-xl" />
         </figure>
