Added footer initially

--- a/index.html
+++ b/index.html
@@ -270,10 +270,45 @@
 
   </main>
 
-  <footer class="bg-slate-300">
-    <h2 class="text-red-950 border-t-indigo-800 rounded"> Footer it is</h2>
-  </footer>
-
+    <footer class="footer p-10 bg-gradient-to-r from-red-100 to-orange-100 text-base-content">
+      <div class="flex justify-between">
+        <img class="bg-black" src="/images/bg_cup.png">
+        <p>Ready to get started? </p>
+        <button class="btn">Get Started</button>
+      </div>
+      <nav>
+        <h6 class="footer-title">Services</h6> 
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav> 
+      <nav>
+        <h6 class="footer-title">Company</h6> 
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav> 
+      <nav>
+        <h6 class="footer-title">Legal</h6> 
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav> 
+      <form>
+        <h6 class="footer-title">Newsletter</h6> 
+        <fieldset class="form-control w-80">
+          <label class="label">
+            <span class="label-text">Enter your email address</span>
+          </label> 
+          <div class="join">
+            <input type="text" placeholder="username@site.com" class="input input-bordered join-item" /> 
+            <button class="btn btn-primary join-item">Subscribe</button>
+          </div>
+        </fieldset>
+      </form>
+    </footer>
 </body>
 
 </html>
