--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <!--Top Part-->
       <div class="relative">
 
-      <div class="relative p-10 rounded-lg bg-white opacity-30 mb-16 z-30">
+      <div class="relative p-10 rounded-lg bg-white opacity-30 mb-16 lg:w-[430px] z-30">
         <img class="absolute -left-4 bottom-52 border-4 border-white rounded-full" src="/images/client.png">
         <p class="text-base font-normalb py-5">We are providing the best and suitable home insurance services for the
           people who are interested to treatment</p>
@@ -192,7 +192,7 @@
       </div>
 
       <!--Middle Part-->
-      <div class="absolute p-10 rounded-lg bg-white top-40 lg:-left-24 lg: w-[430px] z-40">
+      <div class="absolute p-10 rounded-lg bg-white top-40 lg:-left-24 lg:w-[430px] z-40">
         <img class="absolute -left-4 bottom-52 border-4 border-white rounded-full" src="/images/client.png">
         <p class="text-base font-normalb py-5">We are providing the best and suitable home insurance services for the
           people who are interested to treatment</p>
@@ -204,7 +204,7 @@
       </div>
 
       <!--Bottom Part-->
-      <div class="relative p-10 rounded-lg bg-white opacity-30 z-30">
+      <div class="relative p-10 rounded-lg bg-white opacity-30 lg:w-[430px] z-30">
         <img class="absolute -left-4 bottom-52 border-4 border-white rounded-full" src="/images/client.png">
         <p class="text-base font-normalb py-5">We are providing the best and suitable home insurance services for the
           people who are interested to treatment</p>
@@ -270,37 +270,39 @@
 
   </main>
 
-    <footer class="footer p-10 bg-gradient-to-r from-red-100 to-orange-100 text-base-content">
-      <div class="flex justify-between">
-        <img class="bg-black" src="/images/bg_cup.png">
-        <p>Ready to get started? </p>
-        <button class="btn">Get Started</button>
-      </div>
+    <footer class="bg-gradient-to-r from-orange-300 to-red-200 px-48">
+      <div class="flex justify-between p-4">  
+      <img src="/images/cup.png">
+      <div class="flex gap-20">  
+      <p class="text-gray-700 text-lg font-medium">Ready to get started? </p>
+      <button class="btn text-white bg-gradient-to-r from-orange-500 to-red-700">Get Started</button>
+     </div> 
+    </div>
+      <div class="footer p-10 text-base-content">
       <nav>
-        <h6 class="footer-title">Services</h6> 
-        <a class="link link-hover">Branding</a>
-        <a class="link link-hover">Design</a>
-        <a class="link link-hover">Marketing</a>
-        <a class="link link-hover">Advertisement</a>
+        <h6 class="footer-title text-black text-xl font-extrabold py-5">Quick Links</h6> 
+        <a class="link link-hover">Home</a>
+        <a class="link link-hover">About Us</a>
+        <a class="link link-hover">Insurance</a>
+        <a class="link link-hover">Privacy Policy</a>
       </nav> 
       <nav>
-        <h6 class="footer-title">Company</h6> 
-        <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
+        <h6 class="footer-title text-black text-xl font-extrabold py-5">Our Service</h6> 
+        <a class="link link-hover">Life Insurance</a>
+        <a class="link link-hover">Car Insurance</a>
+        <a class="link link-hover">Health Insurance</a>
+        <a class="link link-hover">House Insurance</a>
       </nav> 
       <nav>
-        <h6 class="footer-title">Legal</h6> 
-        <a class="link link-hover">Terms of use</a>
-        <a class="link link-hover">Privacy policy</a>
-        <a class="link link-hover">Cookie policy</a>
+        <h6 class="footer-title text-black text-xl font-extrabold py-5"">Help</h6> 
+        <a class="link link-hover">FAQs</a>
+        <a class="link link-hover">Contact Us</a>
       </nav> 
       <form>
-        <h6 class="footer-title">Newsletter</h6> 
+        <h6 class="footer-title text-black text-xl font-extrabold py-5"">Subscribe to our newsletter</h6> 
         <fieldset class="form-control w-80">
           <label class="label">
-            <span class="label-text">Enter your email address</span>
+            <span class="label-text">Email address</span>
           </label> 
           <div class="join">
             <input type="text" placeholder="username@site.com" class="input input-bordered join-item" /> 
@@ -308,6 +310,13 @@
           </div>
         </fieldset>
       </form>
+    </div>
+
+      <div class="footer footer-center p-4 text-base-content">
+        <aside>
+          <p class="text-gray-700 text-lg font-medium">Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+        </aside>
+      </div>
     </footer>
 </body>
 
