added  more information on style in footer

--- a/index.html
+++ b/index.html
@@ -279,21 +279,21 @@
      </div> 
     </div>
       <div class="footer p-10 text-base-content">
-      <nav>
+      <nav class="text-gray-700 text-base font-medium">
         <h6 class="footer-title text-black text-xl font-extrabold py-5">Quick Links</h6> 
         <a class="link link-hover">Home</a>
-        <a class="link link-hover">About Us</a>
+        <a class="link link-hover ">About Us</a>
         <a class="link link-hover">Insurance</a>
         <a class="link link-hover">Privacy Policy</a>
       </nav> 
-      <nav>
+      <nav class="text-gray-700 text-base font-medium">
         <h6 class="footer-title text-black text-xl font-extrabold py-5">Our Service</h6> 
         <a class="link link-hover">Life Insurance</a>
         <a class="link link-hover">Car Insurance</a>
         <a class="link link-hover">Health Insurance</a>
         <a class="link link-hover">House Insurance</a>
       </nav> 
-      <nav>
+      <nav class="text-gray-700 text-base font-medium">
         <h6 class="footer-title text-black text-xl font-extrabold py-5"">Help</h6> 
         <a class="link link-hover">FAQs</a>
         <a class="link link-hover">Contact Us</a>
@@ -302,11 +302,11 @@
         <h6 class="footer-title text-black text-xl font-extrabold py-5"">Subscribe to our newsletter</h6> 
         <fieldset class="form-control w-80">
           <label class="label">
-            <span class="label-text">Email address</span>
+            <span class="label-text text-gray-700 text-base font-medium pt-12 ">Email address</span>
           </label> 
           <div class="join">
             <input type="text" placeholder="username@site.com" class="input input-bordered join-item" /> 
-            <button class="btn btn-primary join-item">Subscribe</button>
+            <button class="btn btn-primary join-item  rounded-full"><i class="fa-solid fa-arrow-right"></i></button>
           </div>
         </fieldset>
       </form>
@@ -314,7 +314,7 @@
 
       <div class="footer footer-center p-4 text-base-content">
         <aside>
-          <p class="text-gray-700 text-lg font-medium">Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+          <p class="text-gray-700 text-lg font-medium">© 2027 UIDesign.to - All rights reserved.</p>
         </aside>
       </div>
     </footer>
