--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
   </main>
 
     <footer class="bg-gradient-to-r from-orange-300 to-red-200 px-48">
-      <div class="flex justify-between p-4">  
+      <div class="flex justify-between p-4 gap-10 lg:gap-0">  
       <img src="/images/cup.png">
-      <div class="flex gap-20">  
+      <div class="flex gap-6 lg:gap-20">  
       <p class="text-gray-700 text-lg font-medium">Ready to get started? </p>
       <button class="btn text-white bg-gradient-to-r from-orange-500 to-red-700">Get Started</button>
      </div> 
@@ -304,9 +304,9 @@
           <label class="label">
             <span class="label-text text-gray-700 text-base font-medium pt-12 ">Email address</span>
           </label> 
-          <div class="join">
-            <input type="text" placeholder="username@site.com" class="input input-bordered join-item" /> 
-            <button class="btn btn-primary join-item  rounded-full"><i class="fa-solid fa-arrow-right"></i></button>
+          <div class="join gap-4">
+            <input type="text" class="input input-bordered join-item" /> 
+            <button class="btn btn-circle bg-gradient-to-r from-orange-500 to-red-700"><i class="fa-solid fa-angle-right"></i></button>
           </div>
         </fieldset>
       </form>
