--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h1 class="text-7xl font-extrabold text-black">It's good<br>tea time at The<br>Tea House</h1>
           <p class="py-6 text-gray-700">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
             Buds.</p>
-          <button class="btn btn-primary bg-orange-600 text-white border-spacing-3 text-2xl">Explore More <i
+          <button class="btn btn-primary bg-gradient-to-r from-orange-400 to-red-700 text-white border-spacing-3 text-2xl">Explore More <i
               class="fa-solid fa-arrow-up-right-dots"></i></button>
         </div>
         <div>
